<resources>
    <string name="app_name">ClientAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TTCH">Thông tin cửa hàng</string>
    <string name="TTCuaHang">Tên cửa hàng</string>
    <string name="DCCH">Địa chỉ</string>
    <string name="SDTCH">Số điện thoại</string>
    <string name="ChuCH">Chủ cửa hàng</string>
    <string name="email1">Email</string>
    <string name="NDKDV">Ngày đăng kí dịch vụ</string>
    //Login
    <string name="dangnhap">"Đăng nhập"</string>
    <string name="Quanly">"Quản lý"</string>
    <string name="Cuahang">"Cửa hàng"</string>
    <string name="taikhoan">"Tài khoản"</string>
    <string name="matkhau">"Mật khẩu"</string>
    <string name="matkhau1">"Nhập lại mật khẩu"</string>
    <string name="dkch">"Đăng ký cửa hàng"</string>

    //Dangky
    <string name="dangky">"Đăng ký"</string>
    <string name="tencuahang">"Tên cửa hàng"</string>
    <string name="diachi">"Địa chỉ"</string>
    <string name="tenchusuhuu">"Tên chủ sở hữu"</string>
    <string name="email">"Email"</string>
    <string name="sodt">"Số điện thoại"</string>
    <string name="ngaydk">Ngày đăng ký</string>

    <string name="logout">Logout</string>
    <string name="TitleThemSP">Thêm Sản Phẩm</string>
    <string name="GiaSP">Giá Sản Phẩm</string>
    <string name="loaiSP">Loại Sản Phẩm</string>
    <string name="TraSua">Trà Sữa</string>
    <string name="coffee">Coffee</string>
    <string name="TenSP">Tên Sản Phẩm</string>
    <string name="HinhSP">Hình Sản Phẩm</string>
    <string name="idMenuTopping">003</string>
    <string name="idMenuTraSua">002</string>
    <string name="idMenuCoffee">001</string>
    <string name="topping">Topping</string>
    <string name="btnUpdateProduct">Cập nhật sản phẩm</string>
    <string name="btnThemSP">Thêm sản phẩm</string>
    <string name="nameStore">Tên cửa hàng</string>
    <string name="adminAdress">Địa Chỉ Cửa hàng</string>

    <string-array name="spinner_type_product">
        <item name="value1">Coffee</item>
        <item name="value2">Trà sữa</item>
        <item name="value3">Topping</item>
    </string-array>


    <string-array name="menu_product_value">
        <item name="value0">Tất cả</item>
        <item name="value1">Coffee</item>
        <item name="value2">Trà sữa</item>
        <item name="value3">Topping</item>
    </string-array>

    <string-array name="adminItem">
        <item name="value0">Danh sách cửa hàng</item>
        <item name="value1">Đăng ký cửa hàng</item>
        <item name="value2">Lịch sử giao dịch</item>
    </string-array>




    //Thông tin chi tiết cửa hàng
    <string name="tongdonhang">Tổng đơn hàng</string>
    <string name="tienhoahong">Tiền hoa hồng</string>
    <string name="xacnhanthanhtoan">Xác nhận thanh toán</string>

    //actionbar
    <string name="dktk">Đăng ký tài khoản</string>
    <string name="dscuahang">Danh sách cửa hàng</string>
    <string name="lichsu">Lịch sử giao dịch</string>
    <string name="dangxuat">Đăng xuất</string>

    //Thông Tin Giao Hàng
    <string name="ttgiaohang">Thông Tin Giao Hàng</string>
    <string name="ttdonhang">Thông Tin Đơn Hàng</string>

    <string name="madh">Mã Đơn Hàng</string>
    <string name="ngay">Ngày</string>
    <string name="xacnhandh">Xác Nhận Đơn Hàng</string>
    <string name="giaohang">Giao Hàng</string>
    <string name="hoanthanh">Hoàn Thành</string>

    //Đơn Hàng Đã Giao
    <string name="dhdagiao">Đơn Hàng Đã Giao</string>
    <string name="nguoidat">Người Đặt</string>
    <string name="thoigian">Thời Gian</string>
    <string name="giadh">Giá Đơn Hàng</string>
    <string name="tendangnhap">Tên đăng nhập</string>


</resources>
