<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangNhapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ImageView
                android:id="@+id/img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/logoapp"></ImageView>
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbquanly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Quanly"></RadioButton>

            <RadioButton
                android:id="@+id/rbcuahang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/Cuahang"></RadioButton>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnall"
                    android:hint="@string/taikhoan">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnall"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword">

                </EditText>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btnthaydoi"
                android:text="@string/dangnhap">

            </Button>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>