<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".Fragment.Admin.DangKyCuaHangFragment">

    <LinearLayout
        android:screenOrientation="portrait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_account_circle_black_24dp">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="362dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tencuahang">

                    </TextView>

                    <EditText
                        android:id="@+id/edttencuahang"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/diachi">

                    </TextView>

                    <EditText
                        android:id="@+id/edtdiachi"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tenchusuhuu">

                    </TextView>

                    <EditText
                        android:id="@+id/edttenchuho"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tendangnhap">

                    </TextView>

                    <EditText
                        android:id="@+id/edtTenDangNhap"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sodt">

                    </TextView>

                    <EditText
                        android:id="@+id/edtsdt"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall"
                        android:inputType="phone">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ngaydk">

                    </TextView>

                    <EditText
                        android:id="@+id/edtngaydk"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall"
                        android:inputType="datetime">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/matkhau">

                    </TextView>

                    <EditText
                        android:id="@+id/edtmatkhau"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall"
                        android:inputType="datetime">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="43dp"
                        android:text="@string/matkhau1">

                    </TextView>

                    <EditText
                        android:id="@+id/edtmatkhau1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/btnall"
                        android:inputType="datetime">

                    </EditText>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btndangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnthaydoi"
            android:text="@string/dangky">

        </Button>

    </LinearLayout>

</FrameLayout>