<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_weight="0.5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TTCH"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/TTCuaHang"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/DCCH"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/SDTCH"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/ChuCH"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/email"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/NDKDV"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTenCH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtDiaChi"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtSDT"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTenChu"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtNDK"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"

                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/common_google_signin_btn_icon_dark_normal"
                    android:id="@+id/imvAvt"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đáng giá của khách hàng"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtB"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RatingBar>
    </LinearLayout>




</LinearLayout>