<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Store.ThemSanPhamFragment"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/HinhSP">

                </TextView>
                <ImageView
                    android:id="@+id/imgAddSP"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_margin="5dp">

                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/TenSP">

                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtTenSanPham">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loaiSP"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <Spinner
                        android:id="@+id/spinner_type_product"
                        android:paddingTop="15dp"
                        android:entries="@array/spinner_type_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/GiaSP">

                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtGia">

                </EditText>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/TitleThemSP"
            android:textColor="@color/white"
            android:id="@+id/btnThem"
            android:background="@color/colorPrimary">

        </Button>
    </LinearLayout>


</FrameLayout>